# GAP.jl

./: .clang-format  .codecov.yml  .ctags  .gitignore  .mailmap  .travis.yml  Artifacts.toml  CHANGES.md  Makefile  Makefile.am  Makefile.in  OscarCI.toml  PackageInfo.g  Project.toml  README.maintainer.md  README.md  autogen.sh  configure  configure.ac  init.g  read.g  runtests.jl.in  runtests_dir.jl.in  versions.js
JuliaExperimental/: .gitignore  Makefile.am  Makefile.in  PackageInfo.g  README  README.md  autogen.sh  configure  configure.ac  init.g  makedoc.g  read.g
JuliaExperimental/gap/: JuliaExperimental.gd  JuliaExperimental.gi  arith.gi  context.gi  finvar.gd  finvar.gi  gapnemo.g  gapnemo.gd  gapnemo.gi  gapperm.g  gaprat.g  gapsingular.gd  hnf.g  loewy.gd  loewy.gi  numfield.g  realcyc.g  record.g  shortestvectors.g  singular.g  utils.gi  zlattice.g  zmodnz.g
JuliaExperimental/ipynb/: GAPJulia_Arb_realcyc.ipynb  GAPJulia_Singular_blog.ipynb
JuliaExperimental/julia/: gapnemo.jl  gapperm.jl  gaprat.jl  hnf.jl  loewy.jl  numfield.jl  realcyc.jl  singular.jl  utils.jl  zlattice.jl
JuliaExperimental/src/: JuliaExperimental.c  gap_macros.c
JuliaExperimental/tst/: context.tst  finvar.tst  gapnemo.tst  gapperm.tst  gaprat.tst  hnf.tst  loewy.tst  loewy_ext.tst  numfield.tst  realcyc.tst  record.tst  singular.tst  singular_blog.tst  testall.g  utils.tst  zmodnz.tst
JuliaInterface/: .gitignore  Makefile.am  Makefile.in  PackageInfo.g  README.md  configure  configure.ac  init.g  makedoc.g  read.g
JuliaInterface/doc/: conversion.autodoc
JuliaInterface/example/: box_unbox.gi  function_perform.gi  function_perform.jl  gap_function_call.gi  gap_function_call.jl  orbit.c  orbits.gi  orbits.jl  test_julia.gi
JuliaInterface/gap/: BindCFunction.gd  BindCFunction.gi  JuliaInterface.gd  JuliaInterface.gi  JuliaTypeDeclarations.gd  arith.gi  calls.gi  convert.gd  convert.gi  gaprat.g  numfield.g  utils.gi
JuliaInterface/julia/: ccalls.jl  gap.jl  gapperm.jl  gaptypes.jl  hnf.jl  libgap.jl  numfield.jl  zlattice.jl
JuliaInterface/m4/: ac_find_gap.m4
JuliaInterface/src/: JuliaInterface.c  JuliaInterface.h  calls.c  calls.h  convert.c  convert.h  gap_macros.c  julia_macros.c
JuliaInterface/tst/: JuliaToGAP.tst  adapter.tst  arith.tst  box_unbox.tst  calls.tst  convert.tst  gaprat.tst  import.tst  testall.g  testzlattice.jl  utils.tst  wrapper.tst
LibGAP.jl/: README.md  REQUIRE
dev/: .documenter-siteinfo.json  index.html  index.html~  objects.inv  search_index.js
docs/: Project.toml  make.jl  mkdocs.yml
etc/: Project.toml  README.md  ci_test.sh  expect.sh  gac  gather-coverage.g  gather_coverage.g  gather_coverage.jl  generate_artifacts.jl  install_julia_gap.sh  jet.jl  julia.expect  override_utils.jl  run_with_override.jl  setup_override_dir.jl  travis_build.sh  travis_install_gap.sh  travis_test.sh  update_artifacts.jl  update_version.sh
example/: convertcyc.gi  gap_function_call.gi  gap_function_call.jl  hnf.g  orbit.c  orbits.gi  orbits.jl  perms15400.g  perms15400.jl  test_julia.gi
gap/: BindCFunction.gd  BindCFunction.gi  JuliaInterface.gd  JuliaInterface.gi  JuliaTypeDeclarations.gd  convertcyc.g  err.g  exec.g  hnf.g  permutat.g  pkg.g  repl.g  systemfile.g
julia/: convertcyc.jl  gapperm.jl  gaprat.jl  gaptypes.jl  shortestvectors.jl
lib/: err.g  systemfile.g
m4/: ac_find_gap.m4
src/: GAP.jl  GAPJulia.jl  GAP_pkg.jl  JuliaInterface.c  adapter.jl  cbind.jl  ccalls.jl  constructors.jl  conversion.jl  convert.jl  doctestfilters.jl  errors.jl  exec.jl  gap.jl  gap2.jl  gap_macros.c  gap_to_julia.jl  globals.jl  help.jl  initialization.jl  julia-config.jl  julia_to_gap.jl  libgap.jl  lowlevel.jl  macros.jl  obsolete.jl  packages.jl  prompt.jl  repl.jl  setup.jl  sync.jl  treehash.jl  types.jl  utils.jl  wrappers.jl
test/: Aqua.jl  Project.toml  adapter.jl  basics.jl  compat.jl  constructors.jl  convenience.jl  conversion.jl  convert.jl  doctest.jl  errors.jl  help.jl  macros.jl  packages.jl  rand.jl  replcompletions.jl  runtests.jl  runtests_dir.jl  setup.jl  sync.jl  testmanual.jl
tst/: gaprat.tst  hnf.tst  testperm.jl
v0.10.0/: index.html  search_index.js
v0.10.1/: .documenter-siteinfo.json  index.html  search_index.js
v0.10.2/: .documenter-siteinfo.json  index.html  search_index.js
v0.10.3/: .documenter-siteinfo.json  index.html
v0.10.4/: .documenter-siteinfo.json  index.html  objects.inv
v0.11.0/: .documenter-siteinfo.json  index.html
v0.11.1/: .documenter-siteinfo.json  index.html  objects.inv
v0.11.2/: .documenter-siteinfo.json  index.html
v0.11.3/: .documenter-siteinfo.json  index.html  objects.inv
v0.11.4/: .documenter-siteinfo.json  index.html  objects.inv
v0.12.0/: .documenter-siteinfo.json  index.html  search_index.js
v0.12.1/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
v0.12.2/: .documenter-siteinfo.json  index.html  objects.inv
v0.12.3/: .documenter-siteinfo.json  index.html  objects.inv
v0.13.0/: .documenter-siteinfo.json  index.html
v0.13.1/: .documenter-siteinfo.json  index.html
v0.13.2/: .documenter-siteinfo.json  index.html
v0.13.3/: .documenter-siteinfo.json  index.html
v0.13.4/: .documenter-siteinfo.json  index.html
v0.14.0/: .documenter-siteinfo.json  index.html
v0.14.1/: .documenter-siteinfo.json  index.html  objects.inv
v0.14.2/: .documenter-siteinfo.json  index.html
v0.15.0/: .documenter-siteinfo.json  index.html  objects.inv
v0.15.1/: .documenter-siteinfo.json  index.html
v0.15.2/: .documenter-siteinfo.json  index.html
v0.15.3/: .documenter-siteinfo.json  index.html
v0.15.4/: .documenter-siteinfo.json  index.html  objects.inv
v0.16.0/: .documenter-siteinfo.json  index.html  objects.inv
v0.16.1/: .documenter-siteinfo.json  index.html
v0.16.2/: .documenter-siteinfo.json  index.html
v0.16.3/: .documenter-siteinfo.json  index.html
v0.16.4/: .documenter-siteinfo.json  index.html
v0.16.5/: .documenter-siteinfo.json  index.html
v0.16.6/: .documenter-siteinfo.json  index.html
v0.16.7/: .documenter-siteinfo.json  index.html  siteinfo.js
(+1627 files in other folders)
